# lyre-studio

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
deploy/: .firebaserc  DEPLOY.md  cloudbuild.yaml  deploy.sh  firebase.json
deploy/frontend/: Dockerfile  allowed_users.txt.example  main.py  requirements.txt
docs/: notes.md  options.md
experiments/: cuda_gpu.ipynb  record_audio.py  translate_app.py  translate_chatterbox.py
scripts/: start-backend.sh  start-frontend.sh
src/backend/: main.py
src/backend/api/: __init__.py  config.py  routes.py  schemas.py  state.py
src/backend/config/: effects.yaml  supported_languages.yaml
src/backend/voice_services/: __init__.py  audio_handler.py  realtime_effects.py  speech_synthesis.py  translation.py
src/frontend/: bun.lockb  index.html  package.json
src/frontend/docs/: backend-status.md
src/frontend/src/: App.jsx
src/frontend/src/auth/: AuthContext.jsx  Login.jsx  firebase.js
src/frontend/src/hooks/: useBackendStatus.js
